--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -62,4 +62,4 @@ jobs:
         uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: nix build
-        run: nix run nixpkgs#nixci
+        run: nix run github:nixos/nixpkgs/nixos-23.11#nixci
